v0.07.0
* Modified Scene to use an InstanceList
* Converted Janino invocations to use the default system compiler
* Upgraded to Janino 2.5.0
* Modified Mesh class to implement the AggregateTraceable interface
* Added AggregateTraceable interface
* Implemented Instance/Traceable combination
* Added checks for black diffuse/specular components
* Added PerlinVector which produce vector valued noise
* Renamed ImprovedNoise to PerlinScalar and added renderman-like calls

v0.06.4
* Upgraded to Janino 2.4.7
* Regenerated golden benchmark files
* Implemented BanchoffSurface primitive (from RJii's submission)
* Implemented Torus primitive (from RJii's submission)
* Added robust quadratic and quartic solvers
* Improved uv calculations on Sphere
* Added Matrix parsing to SCParser
* Rewrote Sphere to use a Matrix4 transformation instead of center/radius positioning
* Added getCorner() to BoundingBox
* Added Matrix4 class
* Upgraded to Janino 2.4.6
* Minor tweaks to the benchmark mode
* Upgraded to Janino 2.4.5
* Improved the built-in benchmark mode
* Minor optimizations
* Optimized the traversal for KDTree and BoudingIntervalHierarchy a little
* Upgraded to Janino 2.4.4
* Initial implementation of the Bounding Interval Hierarchy paper
* Small fix to TexturedWard and TexturedPhong shaders (null check)
* Created UberShader with individual diffuse and reflection components

v0.06.3
* Moved texture search path functionality out of TextureCache and into SunflowAPI
* Fixed missing text in progress bar during KDTree build in the GUI
* Leave \ in paths when opening files in the GUI. This avoids problems with windows network paths.
* Fixed quantization issues in the SRGB conversions
* Deprecated "glossy-samples" and "light-samples" settings
* Each light and each glossy shader now accepts their own number of samples in the scene file
* ward and phong shader types now parse an optional argument: samples which sets the number of glossy rays